<resources>
    <string name="app_name" translatable="false">PowerNapping</string>

    <!-- TODO: LoginScreen -->
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>

    <!-- TODO: SplashSreen -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recreation">recreation</string>
    <string name="relaxation">relaxation</string>
    <string name="power">power</string>

    <!-- TODO: BottomMenu -->
    <string name="home">Home</string>
    <string name="timer">Timer</string>
    <string name="favorite">Favorite</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: TimerFragment -->
    <string name="restart">restart</string>
    <string name="play">play</string>
    <string name="power_nap">Power Nap</string>
    <string name="check_feel_better">check: feel better?</string>

    <!-- TODO: Dashboard -->
    <string name="I_feel_good">I feel good.</string>

    <!-- TODO: Timer Check Feeling -->
    <string name="check">Check</string>
    <string name="i_feel">I feel</string>

    <!-- TODO: Pick Up Timer -->
    <string name="select_nap_time">Selset power nap time</string>
    <string name="maax_time">(max 60 minuites)</string>
    <string name="min">min</string>

    <!-- TODO: FavoritenFragment -->
    <string name="Best_of_Musik">50 Best of Jamendo Music</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>