<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/library"
        android:icon="@drawable/baseline_library_24"
        android:title="@string/library"/>
    <item
        android:id="@+id/timer"
        android:icon="@drawable/baseline_timeshow_24"
        android:title="@string/timer"/>
   <item
       android:id="@+id/favorite"
       android:icon="@drawable/baseline_favorite_24"
       android:title="@string/favorite"/>
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/dashboard"/>
</menu>