<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pn_blue_light_ori"
    tools:context=".ui.SplashFragment">

    <TextView
        android:id="@+id/splash_erholung_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/italiannoregular"
        android:text="@string/recreation"
        android:textColor="@color/pn_aubergine_ori"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/splash_entspannung_text"
        app:layout_constraintStart_toStartOf="@+id/splash_entspannung_text"
        app:layout_constraintTop_toBottomOf="@+id/splash_entspannung_text" />

    <TextView
        android:id="@+id/splash_power_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/italiannoregular"
        android:text="@string/power"
        android:textColor="@color/pn_aubergine_ori"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/splash_erholung_text"
        app:layout_constraintStart_toStartOf="@+id/splash_erholung_text"
        app:layout_constraintTop_toBottomOf="@+id/splash_erholung_text" />

    <ImageView
        android:id="@+id/splash_logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/logopn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_entspannung_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/italiannoregular"
        android:text="@string/relaxation"
        android:textColor="@color/pn_aubergine_ori"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo_image" />

</androidx.constraintlayout.widget.ConstraintLayout>