<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.TimerFragment">

    <TextView
        android:id="@+id/timer_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/power_nap"
        android:textColor="@color/pn_aubergine_ori"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- time will be showed in this textView -->

    <TextView
        android:id="@+id/timer_showprogress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/pn_aubergine_ori"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/nap_progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/nap_progress_bar"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="@+id/nap_progress_bar"
        app:layout_constraintTop_toTopOf="@+id/nap_progress_bar"
        app:layout_constraintVertical_bias="0.489"
        tools:text="0" />

    <!-- button to check:i feel (emoji slider) -->
    <ProgressBar
        android:id="@+id/nap_progress_bar"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278"
        tools:progress="60" />

    <Button
        android:id="@+id/timer_check_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/pn_gold_ori"
        android:fontFamily="@font/inter_medium"
        android:text="@string/check_feel_better"
        android:textColor="@color/pn_aubergine_ori"
        app:cornerRadius="10dp"
        app:iconTint="@color/pn_gold_ori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_restart_fab" />

    <!-- restart button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/timer_restart_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFF"
        android:clickable="true"
        android:contentDescription="@string/restart"
        android:src="@drawable/baseline_replay_orig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timer_play_fab"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        app:tint="#5395AC" />

    <!-- start button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/timer_play_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/play"
        android:backgroundTint="#5395AC"
        android:clickable="true"
        android:src="@drawable/baseline_play_arrow_orig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/timer_restart_fab"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        app:tint="#D6BA96" />

    <TextView
        android:id="@+id/timer_min_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="-3dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/min"
        android:textColor="@color/pn_aubergine_ori"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_showprogress_text"
        app:layout_constraintStart_toEndOf="@+id/timer_showprogress_text"
        app:layout_constraintTop_toTopOf="@+id/timer_showprogress_text" />

</androidx.constraintlayout.widget.ConstraintLayout>